--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
   "require": {
     "php": "^7.1.0",
     "doctrine/doctrine-bundle": "^1.8",
+    "jeroendesloovere/vcard": "^1.6",
     "symfony/config": "^3.4|^4.0",
-    "symfony/dependency-injection": "^3.4|^4.0",
-    "symfony/framework-bundle": "^3.4|^4.0",
     "symfony/console": "^3.4|^4.0",
-    "jeroendesloovere/vcard-bundle": "1.2.*"
+    "symfony/dependency-injection": "^3.4|^4.0",
+    "symfony/framework-bundle": "^3.4|^4.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.8",
